; ModuleID = '/home/carl/AnghaBench/ios-webkit-debug-proxy/src/extr_rpc.c_rpc_free_apps.c'
source_filename = "/home/carl/AnghaBench/ios-webkit-debug-proxy/src/extr_rpc.c_rpc_free_apps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rpc_free_apps(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca i64*, align 8
  store i64* %0, i64** %2, align 8
  %4 = load i64*, i64** %2, align 8
  %5 = icmp ne i64* %4, null
  br i1 %5, label %6, label %21

6:                                                ; preds = %1
  %7 = load i64*, i64** %2, align 8
  store i64* %7, i64** %3, align 8
  br label %8

8:                                                ; preds = %12, %6
  %9 = load i64*, i64** %3, align 8
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %8
  %13 = load i64*, i64** %3, align 8
  %14 = getelementptr inbounds i64, i64* %13, i32 1
  store i64* %14, i64** %3, align 8
  %15 = load i64, i64* %13, align 8
  %16 = trunc i64 %15 to i32
  %17 = call i32 @rpc_free_app(i32 %16)
  br label %8

18:                                               ; preds = %8
  %19 = load i64*, i64** %2, align 8
  %20 = call i32 @free(i64* %19)
  br label %21

21:                                               ; preds = %18, %1
  ret void
}

declare dso_local i32 @rpc_free_app(i32) #1

declare dso_local i32 @free(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
